<resources>
    <string name="app_name">Dicoding Event APP</string>
    <string name="title_home">Home</string>
    <string name="splashscreen">splashscreen</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="finished_events">Finished Events</string>
    <string name="home">Home</string>
    <string name="image">image</string>
    <string name="event_name">Event Name</string>
    <string name="diselenggarakan_oleh">Diselenggarakan oleh:</string>
    <string name="waktu">Waktu:</string>
    <string name="sisa_kuota">Sisa Kuota:</string>
    <string name="buka_link_event">Buka Link Event</string>
    <string name="nama_event">Nama Event</string>
    <string name="detail_event">Detail Event</string>
    <string name="terjadi_kesalahan">Terjadi kesalahan</string>
    <string name="coba_lagi">Coba Lagi</string>
</resources>