<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.adicoding.dicodingeventapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_active_events"
        android:name="com.adicoding.dicodingeventapp.ui.upcoming.ActiveEventFragment"
        android:label="@string/upcoming_events"
        tools:layout="@layout/fragment_active_event" />

    <fragment
        android:id="@+id/navigation_finished_events"
        android:name="com.adicoding.dicodingeventapp.ui.finished.FinishedEventFragment"
        android:label="@string/finished_events"
        tools:layout="@layout/fragment_finished_event"/>
</navigation>