<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".ui.detail.DetailEventActivity"
    tools:ignore="Overdraw">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="enterAlways"
            android:background="@color/tosca"
            android:titleTextColor="@android:color/white"
            app:title="@string/detail_event"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center" />

            <ImageView
                android:id="@+id/iv_event_cover"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop"
                android:background="@drawable/bg_event_cover"/>

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:cardElevation="8dp"
                android:background="@drawable/rounded_card"
                android:layout_gravity="center"
                android:layout_marginTop="-60dp">

                <ImageView
                    android:id="@+id/iv_event_logo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/image"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_event_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_event"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/tv_event_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diselenggarakan_oleh"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/tv_event_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waktu"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/tv_event_quota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sisa_kuota"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="5dp" />

            <WebView
                android:id="@+id/wv_event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                tools:ignore="WebViewLayout" />

            <Button
                android:id="@+id/btn_event_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buka_link_event"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/tosca" />
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
